--- a/app/src/main/res/layout/item_plant.xml
+++ b/app/src/main/res/layout/item_plant.xml
@@ -1,22 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:padding="16dp">
+
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="16dp">
 
+
     <TextView
         android:id="@+id/commonNameTextView"
-        android:layout_width="match_parent"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
+        android:text="Common Name"
+        android:textColor="#FAF0E6"
         android:textSize="18sp"
-        android:textStyle="bold"
-        android:text="Common Name" />
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/scientificNameTextView"
-        android:layout_width="match_parent"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:text="Scientific Name" />
+        android:text="Scientific Name"
+        android:textColor="#FAF0E6"
+        android:textSize="16sp" />
 </LinearLayout>
+
+    <ImageView
+        android:id="@+id/thumbnailImageView"
+        android:layout_width="95dp"
+        android:layout_height="95dp"
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="16dp" />
+
+</RelativeLayout>
