--- a/app/src/main/res/layout/item_plant.xml
+++ b/app/src/main/res/layout/item_plant.xml
@@ -29,6 +29,14 @@
         android:text="Scientific Name"
         android:textColor="#FAF0E6"
         android:textSize="16sp" />
+
+    <ToggleButton
+        android:id="@+id/favouriteButton"
+        android:layout_width="33dp"
+        android:layout_height="32dp"
+        android:background="@drawable/baseline_favorite_black_24dp"
+        android:button="@null"
+        android:text="ToggleButton" />
 </LinearLayout>
 
     <ImageView
